# workplace-monitoring

./: .gitignore  Test1.txt
Controller_ESP32_S3_code/: Controller_ESP32_S3_code.ino  Controller_loop.ino  Data_BASE.ino  Display_E-inc.ino  Display_image.h  HTTP_Client.h  Reading_modules.ino  WiFi_Web_Connect.ino  setup.ino
Controller_ESP32_S3_code/Icons/Кактус/: cactus_flow.txt
Controller_ESP32_S3_code/Icons/Капля/: drops1.txt
Controller_ESP32_S3_code/Icons/Листик/: Листик1.txt
Controller_ESP32_S3_code/Icons/Огонь/: Огонь.txt
Controller_ESP32_S3_code/Icons/Снежинка/: Снежинка1.txt
WorkplaceMonitor/: CMakeLists.txt  camera_thread.cpp  camera_thread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
WorkplaceMonitor/.qtcreator/: CMakeLists.txt.user.test
WorkplaceMonitorQ/: camera_thread.cpp  camera_thread.h  mainwindow.cpp  mainwindow.h
WorkplaceMonitorvvvv/: CMakeLists.txt  camera_thread.cpp  camera_thread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediapipe_pose.cpp  mediapipe_pose.h  mp_pose_stdout.py  mp_pose_stdout_йцуке.py
